Сделала задание 7 доп

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div class ='days'></div>
+
     <script src="js/main.js"></script>
 </body>
 </html>
