Сделала задание 9доп

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class ='days'></div>
-
+    <div class ='data1'></div>
+    <div class ='data2'></div>
     <script src="js/main.js"></script>
 </body>
 </html>
