--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <div class ='data1'></div>
-    <div class ='data2'></div>
+    <div class ='color-text'>#ffffff</div>
+    <button class = 'color-btn'>Новый цвет!</button>
     <script src="js/main.js"></script>
 </body>
 </html>
