Сделала получение имени и логина

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div class ='color-text'>#ffffff</div>
-    <button class = 'color-btn'>Новый цвет!</button>
+   <h1>Привет, <span class="username-span">Аноним</span></h1>
+   <button class='regicter-btn'>Зарегистрировать пользователя</button>
+   <button class="login-btn">Авторизоваться</button>
+   <ul class='list'></ul>
+
     <script src="js/main.js"></script>
 </body>
 </html>
