--- a/index.html
+++ b/index.html
@@ -407,7 +407,63 @@
 		</div>
 	</div>
 </div>
+
+
+
+<script src="js/validator.js"></script>
+
+<script>
+	const valid = new Validator({
+		selector: '#form1',
+		pattern: {
+			phone: /^\+?[78]([-()]*\d){10}$/,
+			email: /^\w+@\w+\.\w{2,}$/,
+			rusText: /^[а-яА-ЯЁё]+$/
+		},
+		method: {
+			'form1-name' : [
+				['notEmpty'],
+				['pattern', 'rusText']
+			],
+			'form1-phone' : [
+				['pattern', 'phone']
+			],
+			'form1-email' : [
+				['pattern', 'email']
+			]
+		},
+	});
+
+	const valid2 = new Validator({
+		selector: '#form2',
+		pattern: {
+			phone: /^\+?[78]([-()]*\d){10}$/,
+			email: /^\w+@\w+\.\w{2,}$/,
+			rusText: /^[а-яА-ЯЁё\s]+$/
+		},
+		method: {
+			'form2-name' : [
+				['notEmpty'],
+				['pattern', 'rusText']
+			],
+			'form2-phone' : [
+				['pattern', 'phone']
+			],
+			'form2-email' : [
+				['pattern', 'email']
+			],
+			'form2-message' : [
+				['pattern', 'rusText']
+			]
+		},
+	});
+
+	valid.init();
+	valid2.init();
+</script>
+
 <script src="js/main.js"></script>
+
 </body>
 </html>
 
