Повторила код с урока

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-
+	
 <main>
 	<header>
 		<div class="container">
@@ -408,9 +408,7 @@
 	</div>
 </div>
 
-
-
-<script src="js/validator.js"></script>
+<!-- <script src="js/validator.js"></script>
 
 <script>
 	const valid = new Validator({
@@ -460,7 +458,7 @@
 
 	valid.init();
 	valid2.init();
-</script>
+</script> -->
 
 <script src="js/main.js"></script>
 
